# libbitcoin-1

./: Makefile.am  README.md  configure.ac  install.sh
builds/msvc/vs2013/: libbitcoin-consensus.sln
builds/msvc/vs2013/libbitcoin-consensus/: libbitcoin-consensus.vcxproj  libbitcoin-consensus.vcxproj.filters
include/bitcoin/: consensus.hpp
include/bitcoin/consensus/: compat.h  compat.hpp  constants.hpp  define.hpp  primitives.hpp  script.hpp  transaction.hpp
include/bitcoin/consensus/impl/utility/: endian.ipp
include/bitcoin/consensus/math/: checksum.hpp  ec_keys.hpp  hash.hpp  hash_number.hpp  script_number.hpp
include/bitcoin/consensus/utility/: array_slice.hpp  assert.hpp  data.hpp  endian.hpp
src/math/: checksum.cpp  ec_keys.cpp  hash.cpp  hash_number.cpp  script_number.cpp
